@@ -69,6 +69,14 @@ class Backend:
         """
         raise NotImplementedError
 
+    def kill_processes(self):
+        """Kill any processes left running in the target.
+
+        This is allowed to do nothing if stopping the target will reliably
+        kill all processes running in it.
+        """
+        pass
+
     def stop(self):
         """Stop the backend."""
         raise NotImplementedError
